# nix-kubefwd

./: README.md
skill-manager/: .gitignore  Cargo.toml  README.md  devenv.nix
skill-manager/design-docs/: 01-PRESS-RELEASE.md  02-FAQ.md  README.md
skill-manager/design-docs/architecture/: 08-TECHNICAL-ARCHITECTURE.md
skill-manager/design-docs/design/: 03-FEATURE-SPECIFICATION.md  04-CLI-SPECIFICATION.md  05-TUI-SPECIFICATION.md  06-USER-JOURNEYS.md  09-USE-CASES.md
skill-manager/docs/sphinx/: api-reference.md  architecture.md  changelog.md  cli.md  conf.py  configuration.md  contributing.md  getting-started.md  index.md
skill-manager/docs/sphinx/_static/: custom.css
skill-manager/docs/testing/: 07-TESTING-STRATEGY.md  TEST-PLAN.md
skill-manager/src/: lib.rs  main.rs
skill-manager/src/cli/: mod.rs
skill-manager/src/cli/commands/: add.rs  app.rs  completions.rs  config.rs  conflicts.rs  create.rs  doctor.rs  edit.rs  enable.rs  export.rs  import.rs  init.rs  list.rs  migrate.rs  mod.rs  remove.rs  search.rs  (+3 more)
skill-manager/src/domain/: conflict.rs  events.rs  mod.rs  skill.rs  source.rs
skill-manager/src/infra/: config.rs  database.rs  github.rs  mod.rs  storage.rs
skill-manager/src/services/: conflict_service.rs  merge_service.rs  mod.rs  skill_service.rs  traits.rs  update_service.rs
skill-manager/src/tui/: app.rs  mod.rs
skill-manager/src/utils/: error.rs  hash.rs  mod.rs
skill-manager/tests/: cli_add_test.rs  cli_config_test.rs  cli_create_test.rs  cli_doctor_test.rs  cli_enable_test.rs  cli_export_test.rs  cli_init_test.rs  cli_list_test.rs  cli_remove_test.rs  cli_search_test.rs  cli_show_test.rs  cli_sync_test.rs  common.rs
skill-manager/tests/fixtures/: hello-world.md
(+47 files in other folders)
